{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 113,
  "lineage": "f8426b91-0e92-ed88-829a-1979e4f7be96",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MehdiRizvi-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:862686223907:internet-gateway/igw-0a7fe8a76a9afaf2b",
            "id": "igw-0a7fe8a76a9afaf2b",
            "owner_id": "862686223907",
            "tags": {
              "Name": "MehdiRizvi-ig"
            },
            "tags_all": {
              "Name": "MehdiRizvi-ig"
            },
            "vpc_id": "vpc-0da1d3495610e9614"
          },
          "dependencies": [
            "aws_vpc.MehdiRizvi-app-deployment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MehdiRizvi-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:862686223907:route-table/rtb-01c92b7dfc6befb3d",
            "id": "rtb-01c92b7dfc6befb3d",
            "owner_id": "862686223907",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7fe8a76a9afaf2b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0da1d3495610e9614"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MehdiRizvi-ig",
            "aws_vpc.MehdiRizvi-app-deployment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MehdiRizvi-app-deployment-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:862686223907:vpc/vpc-0da1d3495610e9614",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02d51de7c0668010f",
            "default_route_table_id": "rtb-0727370ace4c618a8",
            "default_security_group_id": "sg-05644eff7b8d4766b",
            "dhcp_options_id": "dopt-071a031d83bb3d923",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0da1d3495610e9614",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0727370ace4c618a8",
            "owner_id": "862686223907",
            "tags": {
              "Name": "MehdiRizvi-app-deployment-vpc"
            },
            "tags_all": {
              "Name": "MehdiRizvi-app-deployment-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ddea7950cd45651",
            "arn": "arn:aws:ec2:us-west-2:862686223907:instance/i-0d10b5981379f1659",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d10b5981379f1659",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t1.micro",
            "ipv6_address_count": 0,
            "key_name": "MehdiRizvi-awskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0448c8735c6df6e77",
            "private_dns": "ip-10-10-0-157.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.157",
            "public_ip": "52.37.46.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e101c0dfce6cd540",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a36e3ce137a94f29",
            "tags": {
              "Name": "MehdiRizvi-app"
            },
            "tags_all": {
              "Name": "MehdiRizvi-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ee9b07041f03aa0b"
            ]
          },
          "dependencies": [
            "aws_vpc.MehdiRizvi-app-deployment-vpc",
            "module.application-tier.aws_security_group.MehdiRizvi-sg-group",
            "module.application-tier.aws_subnet.MehdiRizvi-app-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MehdiRizvi-app-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2e298993461375e",
            "route_table_id": "rtb-01c92b7dfc6befb3d",
            "subnet_id": "subnet-0a36e3ce137a94f29"
          },
          "dependencies": [
            "aws_internet_gateway.MehdiRizvi-ig",
            "aws_route_table.MehdiRizvi-rt",
            "aws_vpc.MehdiRizvi-app-deployment-vpc",
            "module.application-tier.aws_subnet.MehdiRizvi-app-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MehdiRizvi-sg-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:862686223907:security-group/sg-0ee9b07041f03aa0b",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee9b07041f03aa0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "82.16.101.203/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "MehdiRizvi-app-sg",
            "name_prefix": "",
            "owner_id": "862686223907",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MehdiRizvi-app-sg"
            },
            "tags_all": {
              "Name": "MehdiRizvi-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da1d3495610e9614"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MehdiRizvi-app-deployment-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-271539915",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ee9b07041f03aa0b",
            "security_group_rule_id": "sgr-02396efb911d9d800",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MehdiRizvi-app-deployment-vpc",
            "module.application-tier.aws_security_group.MehdiRizvi-sg-group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "82.16.101.203/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3433343244",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ee9b07041f03aa0b",
            "security_group_rule_id": "sgr-0e94c03f08dc9eb0e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MehdiRizvi-app-deployment-vpc",
            "module.application-tier.aws_security_group.MehdiRizvi-sg-group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "3.137.172.209/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2245537447",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ee9b07041f03aa0b",
            "security_group_rule_id": "sgr-04dd7415cf55b8036",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application-tier.aws_security_group.MehdiRizvi-sg-group"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MehdiRizvi-app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:862686223907:subnet/subnet-0a36e3ce137a94f29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a36e3ce137a94f29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862686223907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MehdiRizvi-app"
            },
            "tags_all": {
              "Name": "MehdiRizvi-app"
            },
            "vpc_id": "vpc-0da1d3495610e9614"
          },
          "dependencies": [
            "aws_vpc.MehdiRizvi-app-deployment-vpc"
          ]
        }
      ]
    }
  ]
}